--- a/index.ipynb
+++ b/index.ipynb
@@ -1387,7 +1387,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    \n",
     "    distances = distance_all(first_neighbor,neighbors)\n",
-    "    return sorted(distances, key=lambda distance: distance)\n",
+    "    return sorted(distances, key=lambda distance: distance[1])\n",
     "    pass"
    ]
   },
