Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1402,7 +1402,8 @@
     "    return sorted(distances, key=lambda distance: distance[1])\n",
     "    pass\n",
     "fred\n",
-    "nieghbors"
+    "nieghbors\n",
+    "neighbors"
    ]
   },
   {
