--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,16 +1380,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Fred', 'avenue': 4, 'street': 8}"
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8},\n",
+       " {'name': 'Suzie', 'avenue': 1, 'street': 11},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4}]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1400,8 +1405,8 @@
     "    distances = distance_all(first_neighbor,neighbors)\n",
     "    return sorted(distances, key=lambda distance: distance[1])\n",
     "    pass\n",
-    "fred\n",
-    "#neighbors"
+    "#fred\n",
+    "neighbors"
    ]
   },
   {
