--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
        " {'name': 'Natalie', 'avenue': 5, 'street': 4}]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1405,7 @@
     "    distances = distance_all(first_neighbor,neighbors)\n",
     "    return sorted(distances, key=lambda distance: distance[1])\n",
     "    pass\n",
-    "#fred\n",
+    "fred\n",
     "neighbors"
    ]
   },
