Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1405,8 +1405,7 @@
     "    distances = distance_all(first_neighbor,neighbors)\n",
     "    return sorted(distances, key=lambda distance: distance[1])\n",
     "    pass\n",
-    "fred\n",
-    "neighbors"
+    "distances"
    ]
   },
   {
