Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
        " 4.123105625617661]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1404,8 +1404,7 @@
     "    \n",
     "    distances = distance_all(first_neighbor,neighbors)\n",
     "    return sorted(distances, key=lambda distance: distance[1])\n",
-    "    pass\n",
-    "distances"
+    "    pass\n"
    ]
   },
   {
