Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1402,8 +1402,8 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    \n",
-    "    distances = distance_all(first_neighbor,neighbors)\n",
-    "    return sorted(distances, key=lambda distance: distance[1])\n",
+    "    distances = \n",
+    "    return sorted(distance_all(first_neighbor,neighbors), key=lambda distance: distance[1])\n",
     "    pass\n"
    ]
   },
