Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1385,7 +1385,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    return sorted(distance_all(first_neighbor,neighbors), key=lambda distance: distance[3])\n",
+    "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda distance: distance[3])\n",
     "    pass\n"
    ]
   },
