--- a/index.ipynb
+++ b/index.ipynb
@@ -1386,7 +1386,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda distance: distance[3])\n",
-    "    return test\n",
+    "    returtest\n",
     "    pass\n",
     "    "
    ]
