Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,13 +1380,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda distance: distance[3])\n",
-    "    returtest\n",
+    "    rtest\n",
     "    pass\n",
     "    "
    ]
