--- a/index.ipynb
+++ b/index.ipynb
@@ -1386,9 +1386,10 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda distance: distance[3])\n",
-    "    rtest\n",
+    "    return test\n",
     "    pass\n",
-    "    "
+    "    \n",
+    "test2 = "
    ]
   },
   {
