Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1399,7 +1399,7 @@
    ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda distance: distance[1])\n",
+    "    test = sorted(distance_all(first_neighbor,neighbors))\n",
     "    return test\n",
     "    pass\n",
     "    \n"
