Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1402,7 +1402,8 @@
     "    test = sorted(distance_all(first_neighbor,neighbors))\n",
     "    return test\n",
     "    pass\n",
-    "    \n"
+    "    \n",
+    "nearest_neighbors(fred, neighbors, 2)"
    ]
   },
   {
