Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1398,7 +1398,7 @@
    ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    test = sorted(distance_all(first_neighbor,neighbors))\n",
+    "    test = sorted(distance_all(first_neighbor,neighbors),)\n",
     "    return test\n",
     "    pass\n",
     "    \n",
