--- a/index.ipynb
+++ b/index.ipynb
@@ -1398,7 +1398,7 @@
    ],
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    test = sorted(distance_all(first_neighbor,neighbors), key=lamdba)\n",
+    "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda )\n",
     "    return test\n",
     "    pass\n",
     "    \n",
