--- a/index.ipynb
+++ b/index.ipynb
@@ -1397,7 +1397,7 @@
     }
    ],
    "source": [
-    "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
+    "#def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\n",
     "    return test\n",
     "    pass\n",
