Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1397,12 +1397,14 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "#def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\n",
-    "    return test\n",
-    "    pass\n",
+    " #   test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\n",
+    "  #  return test\n",
+    "   # pass\n",
     "    \n",
-    "nearest_neighbors(fred, neighbors, 2)"
+    "#nearest_neighbors(fred, neighbors, 2)"
    ]
   },
   {
