Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,23 +1380,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'nighbors' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-57-054e9a6c4ece>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnighbors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#def nearest_neighbors(first_neighbor, neighbors, number = None):\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m  \u001b[0;31m#   test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0;31m#  return test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nighbors' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'name': 'Fred', 'avenue': 4, 'street': 8},\n",
+       " {'name': 'Suzie', 'avenue': 1, 'street': 11},\n",
+       " {'name': 'Bob', 'avenue': 5, 'street': 8},\n",
+       " {'name': 'Edgar', 'avenue': 6, 'street': 13},\n",
+       " {'name': 'Steven', 'avenue': 3, 'street': 6},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4}]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "nighbors\n",
+    "neighbors[3]\n",
     "\n",
     "#def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     " #   test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\n",
