--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,27 +1380,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'name': 'Fred', 'avenue': 4, 'street': 8},\n",
-       " {'name': 'Suzie', 'avenue': 1, 'street': 11},\n",
-       " {'name': 'Bob', 'avenue': 5, 'street': 8},\n",
-       " {'name': 'Edgar', 'avenue': 6, 'street': 13},\n",
-       " {'name': 'Steven', 'avenue': 3, 'street': 6},\n",
-       " {'name': 'Natalie', 'avenue': 5, 'street': 4}]"
+       "{'name': 'Edgar', 'avenue': 6, 'street': 13}"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neighbors[3]\n",
+    "neighbors[3].\n",
     "\n",
     "#def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     " #   test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\n",
