--- a/index.ipynb
+++ b/index.ipynb
@@ -1395,7 +1395,7 @@
     }
    ],
    "source": [
-    "neighbors[3].\n",
+    "neighbors[3].get(\"distance\")\n",
     "\n",
     "#def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     " #   test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\n",
