Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,11 +1380,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "neighbors[3].get(\"distance\")\n",
+    "neighbors[3].get()\n",
     "\n",
     "#def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     " #   test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\n",
