--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,11 +1380,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Edgar', 'avenue': 6, 'street': 13}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "neighbors[3].get()\n",
+    "neighbors[3].\n",
     "\n",
     "#def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     " #   test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\n",
