--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,22 +1380,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'name': 'Edgar', 'avenue': 6, 'street': 13}"
+       "13"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "neighbors[3].\n",
+    "neighbors[3].get('street')\n",
     "\n",
     "#def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     " #   test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\n",
