--- a/index.ipynb
+++ b/index.ipynb
@@ -1396,12 +1396,10 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "#def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
-    " #   test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\n",
-    "  #  return test\n",
-    "   # pass\n",
+    "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
+    "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor[3])\n",
+    "    return test\n",
+    "    pass\n",
     "    \n",
     "#nearest_neighbors(fred, neighbors, 2)"
    ]
