Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1401,7 +1401,7 @@
     "    return test\n",
     "    pass\n",
     "    \n",
-    "#nearest_neighbors(fred, neighbors, 2)"
+    "nearest_neighbors(fred, neighbors, 2)"
    ]
   },
   {
