Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1401,7 +1401,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor.get('distance'))\n",
-    "    if return test\n",
+    "    if numbereturn test\n",
     "    pass\n",
     "    \n",
     "nearest_neighbors(fred, neighbors, 2)"
