--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1390,7 @@
        " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979}]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1398,7 +1398,7 @@
    "source": [
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor.get('distance'))\n",
-    "    return test[0:2]\n",
+    "    return test[0:number]\n",
     "    pass\n",
     "    \n",
     "nearest_neighbors(fred, neighbors, 2)"
