--- a/index.ipynb
+++ b/index.ipynb
@@ -1380,17 +1380,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[{'name': 'Bob', 'avenue': 5, 'street': 8, 'distance': 1.0},\n",
-       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979}]"
+       " {'name': 'Steven', 'avenue': 3, 'street': 6, 'distance': 2.23606797749979},\n",
+       " {'name': 'Natalie', 'avenue': 5, 'street': 4, 'distance': 4.123105625617661}]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1402,7 @@
     "    return test[0:number]\n",
     "    pass\n",
     "    \n",
-    "nearest_neighbors(fred, neighbors, 2)"
+    "nearest_neighbors(fred, neighbors, 3)"
    ]
   },
   {
