Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1400,9 +1400,7 @@
     "def nearest_neighbors(first_neighbor, neighbors, number = None):\n",
     "    test = sorted(distance_all(first_neighbor,neighbors), key=lambda neighbor: neighbor.get('distance'))\n",
     "    return test[0:number]\n",
-    "    pass\n",
-    "    \n",
-    "nearest_neighbors(fred, neighbors, 3)"
+    "    pass"
    ]
   },
   {
